Miscellaneous text updates

--- a/cms/templates/visibility_editor.html
+++ b/cms/templates/visibility_editor.html
@@ -46,7 +46,7 @@ is_staff_locked = ancestor_has_staff_lock(xblock)
     <form class="visibility-controls-form" method="post" action="">
 
         <div class="modal-section visibility-controls">
-            <h3 class="modal-section-title">${_('Set visibility to:')}</h3>
+            <h3 class="modal-section-title">${_('Make visible to:')}</h3>
 
             <div class="modal-section-content">
 
