--- a/cms/static/sass/views/_group-configuration.scss
+++ b/cms/static/sass/views/_group-configuration.scss
@@ -19,7 +19,7 @@
       text-align: center;
     }
 
-    .no-group-configurations-content {
+    .no-content {
       @extend %no-content;
     }
 
